2007-12-14 Benny Malengier <benny.malengier@gramps-project.org>
	* src/RelLib/_Repository.py: Repo has address which can have source, so
		backref of source to repo must be allowed and added!
	* src/DisplayTabs/_BackRefModel.py: Repo can be backref, add
	* src/DisplayTabs/_BackRefList.py: Repo can be backref, add

2007-12-11 Benny Malengier <benny.malengier@gramps-project.org>
	* src/plugins/IndivComplete.py: bug on buglist, wrong parameter

2007-12-10 Benny Malengier <benny.malengier@gramps-project.org>
	* src/RelLib/_Event.py: add attr to list of sec objects, bug #1318

2007-12-09  Alex Roitman  <shura@gramps-project.org>
	* data/grampsxml.rng: Add namemaps.
	* data/grampsxml.dtd: Add namemaps.

2007-12-07 Benny Malengier <benny.malengier@gramps-project.org>
	Add support for name grouping import/export
	* src/GrampsDb/_GrampsDbBase.py: obtain grouping keys
	* src/GrampsDb/_ReadXML.py: read in group table
	* src/GrampsDb/_DbUtils.py: grdb -> grdb copy of grouping table
	* src/GrampsDb/_ReadGrdb.py: read in group table
	* src/GrampsDb/_WriteXML.py: write group table out
	* src/GrampsDb/_GrampsBSDDB.py: group table is no sec table, init it
	together with primary tables!

2007-11-28 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDb/_ReadGedcom.py : #1399 remove trail whitespace (readahead)
	fixes discarded reference due to bogus handles that get created
	when the reference looks like "@REF_ID@ " (note space after) 

2007-11-26 Jim Sack <jgsack@san.rr.com>
	*  src/plugins/ReadPkg.py : reverted previous change
	better to leave it broken than to risk worse

2007-11-26 Jim Sack <jgsack@san.rr.com>
	* src/plugins/ReadPkg.py : #1378 add isfile() before remove()
	Note: this may be part a larger "relative path" problem 

2007-11-24 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditPerson.py: callback family update bug removed

2007-11-23 Benny Malengier <benny.malengier@gramps-project.org>